<resources>
    <string name="app_name">10Ants</string>
    <string name="tenants">Tenants</string>
    <string name="expenses">Expenses</string>
    <string name="about_app">About App</string>>
    <string name="developed_by">Developed By Team AIR</string>
    <string name="team_members">Adrian Del Rosario | Ivy Rose Valdez | Rodrigo Adati</string>
    <string name="feedback">Feedback</string>
    <string name="email">Email</string>
    <string name="recommend_friends">Recommend to Friends via email</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="pay_to">Pay to</string>
    <string name="paid_on">Paid on</string>
    <string name="phone">Phone</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="chat_room">Zest apartment #1234</string>
    <string name="receipt">RECEIPT</string>
    <string name="expense">EXPENSES</string>
    <string name="attach">REPORT</string>
    <string name="information_property">Property Information</string>
    <string name="information_tenant">Tenant Information</string>
    <string name="information_expense">Expense Information</string>
    <string name="add_property">Add Property</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_tenant">Add Tenant</string>
    <string name="save_property">Save Property</string>
    <string name="save_expense">Save Expense</string>
    <string name="save_tenant">Save Tenant</string>
    <string name="select_property">Select Property</string>
    <string name="select_expense">Select Expense</string>
    <string name="property_type">Property Type</string>
    <string name="property_name">Name:</string>
    <string name="property_address">Address:</string>
    <string name="property_description">Description:</string>
    <string name="property_email">Email:</string>
    <string name="capture_expense">Capture A Photo Of Your Expenses Receipt</string>
    <string name="capture_rent">Capture A Photo Of Your Rent Receipt</string>
    <string name="type_here">Type_Here</string>
    <string name="photo_button">Take Photo!</string>
    <string name="send_button">SEND</string>


    <array name="property_type">
        <item>House</item>
        <item>Apartment</item>
    </array>

    <array name="expense_type">
        <item>Rent</item>
        <item>Water</item>
        <item>Power</item>
        <item>Internet</item>
        <item>Shopping</item>
        <item>Groceries</item>
        <item>Cleaning</item>
    </array>
</resources>
