<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TableRow
        android:id="@+id/trInfo"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="@color/colorPrimary">
        <TextView
            android:text="@string/information_property"
            android:layout_gravity="center_vertical"
            android:textSize="15sp"/>
    </TableRow>

    <TableRow
        android:id="@+id/trName"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_below="@+id/trInfo">

        <EditText
            android:id="@+id/etName"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/name" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:layout_weight="4.01"/>
    </TableRow>

    <TableRow
        android:id="@+id/trAddress"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_below="@+id/trName">

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/address" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4.01"/>
    </TableRow>

    <TableRow
        android:id="@+id/trDescription"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_below="@+id/trAddress">

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/description" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4.01" />
    </TableRow>


    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_property"
        android:layout_below="@+id/trDescription"
        android:layout_centerHorizontal="true" />

</RelativeLayout>