<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableRow
        android:id="@+id/trInfo"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="@color/colorPrimary">
        <TextView
            android:text="@string/information_expense"
            android:layout_gravity="center_vertical"
            android:textSize="15sp"/>
    </TableRow>

    <TableRow
        android:id="@+id/trAmount"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_below="@+id/trInfo">

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/amount" />

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:layout_weight="4.01"
            android:text="TextView" />
    </TableRow>

    <TableRow
        android:id="@+id/trCategory"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_below="@+id/trAmount">

        <EditText
            android:id="@+id/etCategory"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/category" />

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4.01"
            android:text="TextView" />
    </TableRow>

    <TableRow
        android:id="@+id/trPayTo"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_below="@+id/trCategory">

        <EditText
            android:id="@+id/etPayTo"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/pay_to" />

        <TextView
            android:id="@+id/tvPayTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4.01"
            android:text="TextView" />
    </TableRow>

    <TableRow
        android:id="@+id/trPaidOn"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_below="@+id/trPayTo">

        <EditText
            android:id="@+id/etPaidOn"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/paid_on" />

        <TextView
            android:id="@+id/tvPaidOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4.01"
            android:text="TextView" />
    </TableRow>
</RelativeLayout>