
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="16dp">

    <Button
        android:id="@+id/btnReceipt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/receipt"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/tenantsGreen">
    </Button>


    <Button
        android:id="@+id/btnExpense"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/expenses"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:background="@color/tenantsGreen"
        android:layout_below="@+id/btnReceipt"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp" />

    <Button
        android:id="@+id/btnReport"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/attach"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:background="@color/tenantsGreen"
        android:layout_below="@+id/btnExpense"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />

</RelativeLayout>